@@ -1,4 +1,8 @@
 = Version History =
+x.x:
+
+- changed: title with group admin transfer
+
 1.9 (2011-12-05):
 
 - added: option for group admins to show group widgets to non members in case of a closed group
